update after correction of the test sketch