@@ -7,7 +7,6 @@
 
 package com.draeger.medical.sdccc.tests.biceps.direct;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.draeger.medical.sdccc.configuration.EnabledTestConfig;
@@ -17,6 +16,7 @@ import com.draeger.medical.sdccc.tests.annotations.TestDescription;
 import com.draeger.medical.sdccc.tests.annotations.TestIdentifier;
 import com.draeger.medical.sdccc.tests.util.NoTestData;
 import com.draeger.medical.sdccc.util.MessageGeneratingUtil;
+import com.google.common.collect.Sets;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -27,12 +27,16 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.somda.sdc.biceps.common.MdibEntity;
 import org.somda.sdc.biceps.model.message.GetContextStatesResponse;
 import org.somda.sdc.biceps.model.message.GetMdStateResponse;
 import org.somda.sdc.biceps.model.participant.AbstractContextDescriptor;
 import org.somda.sdc.biceps.model.participant.AbstractContextState;
+import org.somda.sdc.biceps.model.participant.AbstractDescriptor;
 import org.somda.sdc.biceps.model.participant.AbstractMultiState;
 import org.somda.sdc.biceps.model.participant.AbstractState;
 import org.somda.sdc.biceps.model.participant.MdsDescriptor;
@@ -42,6 +46,7 @@ import org.somda.sdc.biceps.model.participant.MdsDescriptor;
  */
 public class DirectParticipantModelServiceOperationsTest extends InjectorTestBase {
 
+    private static final Logger LOG = LogManager.getLogger();
     private TestClient testClient;
     private MessageGeneratingUtil messageGeneratingUtil;
 
@@ -160,31 +165,43 @@ public class DirectParticipantModelServiceOperationsTest extends InjectorTestBas
 
     @Test
     @TestIdentifier(EnabledTestConfig.BICEPS_R5042)
-    @TestDescription("Verify that for each present Mds descriptor #mds# the following applies:\n"
-            + "   - request msg:GetContextStates for the #mds# and get all returning handle "
-            + "references #all_handle_refs#\n"
-            + "   - get all context states from the mdib #all_mds_context_states# for the given #mds#\n"
-            + "   - verify that the lists #all_handle_refs# and #all_mds_context_states# are equal")
+    @TestDescription("Verify that for each present Mds descriptors combination #mds_handle_comb# the "
+            + "following applies:\n"
+            + "   - request msg:GetContextStates for the #mds_handle_comb# and get all returning handle "
+            + "references #handle_refs_response#"
+            + "   - get all context states from the mdib #all_mds_context_states# for the given #mds_handle_comb#\n"
+            + "   - verify that all elements from #all_mds_context_states# are contained in the "
+            + "list #handle_refs_response#")
     void testRequirementR5042() throws NoTestData {
 
-        final List<MdsDescriptor> mdsDescriptors =
+        final List<String> mdsHandleList =
                 testClient.getSdcRemoteDevice().getMdibAccess().findEntitiesByType(MdsDescriptor.class).stream()
                         .map(mdibEntity -> (MdsDescriptor) mdibEntity.getDescriptor())
-                        .collect(Collectors.toList());
-
-        assertTestData(mdsDescriptors, "No Mds descriptor is present.");
+                        .map(AbstractDescriptor::getHandle)
+                        .toList();
+        assertTestData(mdsHandleList, "No Mds descriptor is present.");
 
         final var contextStateSeen = new AtomicBoolean(false);
 
-        for (var mds : mdsDescriptors) {
-            final var allMdsContextStateEntities =
-                    testClient
-                            .getSdcRemoteDevice()
-                            .getMdibAccess()
-                            .findEntitiesByType(AbstractContextDescriptor.class)
-                            .stream()
-                            .filter(it -> it.getParentMds().equals(mds.getHandle()))
-                            .collect(Collectors.toSet());
+        final var allMdsCombinations = Sets.powerSet(new HashSet<>(mdsHandleList)).stream()
+                .filter(it -> !it.isEmpty())
+                .collect(Collectors.toSet());
+
+        for (var mdsCombination : allMdsCombinations) {
+            LOG.debug("Start verification for the mds descriptor combination {}.", mdsCombination);
+
+            final var allMdsContextStateEntities = new ArrayList<MdibEntity>();
+
+            for (var mdsHandle : mdsCombination) {
+                final var mdsContextStateEntities = testClient
+                        .getSdcRemoteDevice()
+                        .getMdibAccess()
+                        .findEntitiesByType(AbstractContextDescriptor.class)
+                        .stream()
+                        .filter(it -> it.getParentMds().equals(mdsHandle))
+                        .collect(Collectors.toSet());
+                allMdsContextStateEntities.addAll(mdsContextStateEntities);
+            }
 
             if (!allMdsContextStateEntities.isEmpty()) {
                 contextStateSeen.set(true);
@@ -197,13 +214,13 @@ public class DirectParticipantModelServiceOperationsTest extends InjectorTestBas
                     .collect(Collectors.toSet());
 
             final GetContextStatesResponse getContextStatesResponse = (GetContextStatesResponse) messageGeneratingUtil
-                    .getContextStates(List.of(mds.getHandle()))
+                    .getContextStates(mdsHandleList)
                     .getOriginalEnvelope()
                     .getBody()
                     .getAny()
                     .get(0);
 
-            verifyStatesInResponseMultiMds(allExpectedMdsContextStateHandles, getContextStatesResponse);
+            verifyStatesInResponse(allExpectedMdsContextStateHandles, getContextStatesResponse);
         }
         assertTestData(contextStateSeen.get(), "No context states found for all present mds descriptors.");
     }
@@ -267,6 +284,12 @@ public class DirectParticipantModelServiceOperationsTest extends InjectorTestBas
                 .map(AbstractContextState::getHandle)
                 .collect(Collectors.toSet());
 
+        LOG.debug(
+                "Start verification that the expected context state handles {} are contained in the "
+                        + "GetContextStatesResponse {}.",
+                expectedContextStateHandles,
+                contextStateHandles);
+
         for (var expectedContextStateHandle : expectedContextStateHandles) {
             assertTrue(
                     contextStateHandles.contains(expectedContextStateHandle),
@@ -284,24 +307,6 @@ public class DirectParticipantModelServiceOperationsTest extends InjectorTestBas
             assertTrue(
                     descriptorHandles.contains(expectedDescriptorHandle),
                     String.format("Descriptor handle %s has not been seen in response.", expectedDescriptorHandle));
-        }
-    }
-
-    private void verifyStatesInResponseMultiMds(
-            final Set<String> expectedContextStateHandles, final GetContextStatesResponse response) {
-        final Set<String> contextStateHandles = response.getContextState().stream()
-                .map(AbstractContextState::getHandle)
-                .collect(Collectors.toSet());
-
-        assertEquals(
-                expectedContextStateHandles.size(),
-                contextStateHandles.size(),
-                "Both lists should have the same length.");
-
-        for (var expectedContextStateHandle : expectedContextStateHandles) {
-            assertTrue(
-                    contextStateHandles.contains(expectedContextStateHandle),
-                    String.format("State handle %s has not been seen in response.", expectedContextStateHandle));
         }
     }
 }
